fixed alignment on forms proceed and fonts

--- a/src/main/webapp/app/argon/assets/css/argon-dashboard-react.css
+++ b/src/main/webapp/app/argon/assets/css/argon-dashboard-react.css
@@ -4024,7 +4024,7 @@ input[type='button'].btn-block {
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
   border-color: #5e72e4;
   background-color: #5e72e4;
-  box-shadow: ;
+  box-shadow: none;
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
