--- a/src/main/webapp/app/modules/administration/workflow/pageSwitcher/pageS.css
+++ b/src/main/webapp/app/modules/administration/workflow/pageSwitcher/pageS.css
@@ -1,7 +1,6 @@
 body {
-  margin: 20px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-    'Helvetica Neue', sans-serif;
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,7 +9,7 @@ code {
 }
 
 .box {
-  width: 800px;
+  width: 100%;
   border: 1px solid #ddd;
 }
 .box .steps {
@@ -24,15 +23,18 @@ code {
   padding: 10px 0 15px 45px;
   position: relative;
   background: #f5f5f5;
-  width: 165px;
+  width: 100%;
+  height: 100%;
 }
 .box .steps ul li div span {
-  font-size: 13px;
+  font-size: 12px;
 }
-.box .steps ul li:first-child div {
-  width: 135px;
-  padding-left: 15px;
-}
+
+/*.box .steps ul li:first-child div {*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  padding-left: 15px;*/
+/*}*/
 .box .steps ul li div::before {
   content: ' ';
   border-top: 50px solid transparent;
@@ -75,7 +77,6 @@ code {
 
 .box .step-component {
   padding: 20px;
-  height: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
